# pedro-llm-router

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
pedro_llm_router/: __init__.py  models.py  router.py
playground/: app.py
playground/static/: index.html
tests/: conftest.py  test_router.py
