[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pedro-llm-router"
version = "0.1.0"
description = "FailoverRouter para OpenRouter: reintentos automáticos y failover entre modelos LLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]
playground = ["fastapi", "uvicorn[standard]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pedro_llm_router*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
